# SimpleRabbitMQ

./: CMakeLists.txt  README.md  conn_handler.h  main_lib.cpp  srmq.cpp  srmq.h
